--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ Hello World
   <title>Тег А, атрибут href</title>
  </head>
  <body>
-  <p><a href="https://egortka.github.com/index.html">egortka.github.com</a></p>
+  <p><a href="https://egortka.github.io/index.html">egortka.github.io</a></p>
  </body>
 </html>
