--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 Hello World
+<html>
+ <head>
+  <meta charset="utf-8">
+  <title>Тег А, атрибут href</title>
+ </head>
+ <body>
+  <p><a href="com.pushwoosh://promotion">com.pushwoosh://promotion</a></p>
+ </body>
+ <form action="https://egortka.github.io/index.html">
+    <input type="submit" value="Go to Google" />
+</form>
+</html>
